--- a/survey.html
+++ b/survey.html
@@ -1,6 +1,6 @@
 <html>
 <head> </head>
-<body background="background1.jpg" width="500" height="700">
+<body background="background1.jpg" >
 <form>
 <table style= "margin-left:150px;margin-right:150px;" width="80%"  border="0" >
 
