--- a/Survey/survey.html
+++ b/Survey/survey.html
@@ -11,7 +11,7 @@
 <tr><td align="right" colspan="2"><input type="text" align="right" value="Date:"/></td></tr>
 </table>
 
-<table style= "margin-left:150px;margin-right:150px;background-color:white;" width="80%"  border="0" >
+<table style= "margin-left:150px;margin-right:150px;background-color:pink;" width="80%"  border="0" >
 
 <tr>
 <td colspan="3" align="center"><b>CLIENT INFORMATION </b></td>
