--- a/Survey/survey.html
+++ b/Survey/survey.html
@@ -60,15 +60,15 @@ Company Site:<br>
 </tr>
 <tr>
 <td>
-Identity Design
+<input type="checkbox">Identity Design</input>
 </td>
 
 <td>
-Social Media Design
+<input type="checkbox">Social Media Design</input>
 </td>
 
 <td>
-Logo Design
+<input type="checkbox">Logo Design</input>
 </td>
 </tr>
 
