--- a/Survey/survey.html
+++ b/Survey/survey.html
@@ -8,7 +8,7 @@
 <td><img src="download.jpg" align="right" width="50" height="70"></td></tr>
 <tr><td><h2>FORM TEMPLATE</h2></td>
 </tr>
-<tr><td align="right" colspan="2"><input type="text" align="right" value="Date:"/></td></tr>
+<tr><td align="right" colspan="2"><input type="text" align="right" placeholder="Date"/></td></tr>
 </table>
 
 <table style= "margin-left:150px;margin-right:150px;background-color:pink;" width="80%"  border="0" >
