--- a/Survey/survey.html
+++ b/Survey/survey.html
@@ -56,7 +56,7 @@ Company Site:<br>
 </tr>
 
 <tr>
-<td colspan="3" align="center"><b>WHICH OUR SERVICES ARE YOU INTERSETED IN?</b></td>
+<td colspan="3" ><b>WHICH OUR SERVICES ARE YOU INTERSETED IN?</b></td>
 </tr>
 <tr>
 <td>
